# ckpt

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: diff_checkpoints.py  estimate_size.py  inspect_checkpoint.py
scripts/: generate_assets.py
src/ckpt/: __init__.py  _types.py  cli.py  convert.py  diff.py  estimator.py  gguf.py  inspect.py  merge.py  metadata.py  stats.py  validate.py
tests/: test_cli.py  test_convert.py  test_diff.py  test_diff_visual.py  test_estimator.py  test_gguf.py  test_inspect.py  test_merge.py  test_metadata.py  test_stats.py  test_types.py  test_validate.py
